--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "axios": "^1.6.5",
     "discord.js": "^14.14.1",
-    "dotenv": "^16.4.1"
+    "dotenv": "^16.4.1",
+    "puppeteer": "^22.0.0"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
