--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.5",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.1",
+    "mysql2": "^3.9.1",
     "puppeteer": "^22.0.0"
   },
   "devDependencies": {
